# finance-bot

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  REFAC_PLAN.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.infra/: nginx.conf
conf/: nginx.conf  prompt.txt
finance_bot/: asgi.py  authentication.py  logging.py  module_utils.py  settings.py  urls.py  wsgi.py
finance_bot/agents/: apps.py  base.py  config.py  crew.py  factory.py  finance_agent.py  loader.py  tests.py
finance_bot/agents/config/: agents.yml  tasks.yml
finance_bot/agents/tools/: create_category_tool.py  create_transaction_tool.py  search_category_tool.py  search_user_categories_tool.py
finance_bot/finance/: admin.py  agent.py  apps.py  constants.py  models.py  serializers.py  tests.py  tools.py  urls.py  views.py
finance_bot/finance/migrations/: 0001_initial.py  0002_alter_transaction_user.py  0002_rename_user_id_category_user_and_more.py  0003_alter_transaction_date.py  0003_rename_category_id_subcategory_category_and_more.py  0004_alter_transaction_date.py  0005_category_normalized_name.py  0006_alter_category_options_delete_goal_delete_user.py
finance_bot/langchain_bot/: admin.py  agent.py  agent_factory.py  apps.py  config.py  consumers.py  logging.py  models.py  tool_manager.py  tools.py  urls.py  views.py
finance_bot/langchain_bot/migrations/: 0001_initial.py  0002_agentsettings_is_default.py  0003_agentsettings_model.py  (+2 more)
finance_bot/telegram_bot/: admin.py  apps.py  handlers.py  middlewares.py  models.py  tests.py
finance_bot/users/: admin.py  apps.py  models.py
(+27 files in other folders)
