[project]
name = "finance-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "django>=5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.2.14",
    "psycopg2-binary>=2.9.10",
]
