[project]
name = "finance-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.108.0",
    "crewai-tools>=0.38.1",
    "django>=5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.2.14",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.30.0",
    "webdriver-manager>=4.0.2",
    "googlesearch-python>=1.3.0",
    "langchain-ollama>=0.3.1",
    "langgraph>=0.3.30",
    "python-dotenv>=1.1.0",
    "pytelegrambotapi>=4.26.0",
]
