[project]
name = "finance-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.2.14",
    "psycopg2-binary>=2.9.10",
    "langgraph>=0.3.30",
    "python-dotenv>=1.1.0",
    "pytelegrambotapi>=4.26.0",
    "channels[daphne]>=4.2.2",
    "daphne>=4.2.0",
    "langchain>=0.3.27",
]
